--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,12 +1,29 @@
-trigger:
-- master
+stages:
+  - stage: "build_index"
+    jobs:
+      - job: "build"
+        steps:
+          - task: Docker@2
+            inputs:
+              containerRegistry: "docker-registry"
+              repository: "raggupta/sampleazapp"
+              tags: $(Build.SourceVersion)
+              command: "buildAndPush"
+              Dockerfile: "**/Dockerfile"
 
-pool:
-  vmImage: ubuntu-latest
+  - stage: "deploy_index_html"
+    dependsOn: 
+      - build_index
+    jobs:
+      - deployment: VMDeploy
+        displayName: Web deploy
+        environment:
+          name: Dev
+          resourceType: VirtualMachine
+          tags: docker,aws-linux
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+              - script: sudo docker run -dit -p 80:80 raggupta/sampleazapp:$(Build.SourceVersion)
 
-steps:
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(build.sourcesDirectory)'
-    includeRootFolder: false
-- task: PublishBuildArtifacts@1
