--- a/trigger-ansible-job.yaml
+++ b/trigger-ansible-job.yaml
@@ -9,4 +9,4 @@ variables:
 steps: 
   - script: |
       echo 'running the Ansible tower job'
-      curl -XPOST http://3.238.58.152/api/v2/job_templates/${{jobTemplateId}}/launch/ -u '${{ awxUsername }}:${{ awxPassword }}'
+      curl -XPOST http://3.238.58.152/api/v2/job_templates/$(jobTemplateId)/launch/ -u '$(awxUsername):$(awxPassword)'
